# libprjx

./: .gitignore  CMakeLists.txt  LICENSE  README.md
examples/: checksum.cpp  vector.cpp
include/prjx/math/: scalar.hpp  vector.hpp
include/prjx/util/: checksum.hpp  magic.h  magic.hpp
tools/: prjxsum.cpp
